test-models/src/main/pegasus/com/datahub/test/invalid/NonNumericSearchScoreField.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record NonNumericSearchScoreField {
  @SearchScore = {}
  textField: string
}